--- a/frontend/language/src/nb.json
+++ b/frontend/language/src/nb.json
@@ -920,6 +920,9 @@
   "ux_editor.modal_properties_image_src_value_label": "Kilde",
   "ux_editor.modal_properties_image_width_label": "Bredde",
   "ux_editor.modal_properties_label": "Ledetekst:",
+  "ux_editor.modal_properties_textResourceBindings.description": "Beskrivelse:",
+  "ux_editor.modal_properties_textResourceBindings.help": "Hjelpetekst:",
+  "ux_editor.modal_properties_title": "Ledetekst:",
   "ux_editor.modal_properties_label_helper": "Søk etter ledetekst",
   "ux_editor.modal_properties_maximum_file_size": "Maksimal filstørrelse",
   "ux_editor.modal_properties_maximum_file_size_helper": "MB",
